Correct right aligned checkbox checked state. (#235)

--- a/src/scss/mixins/_radio-checkbox.scss
+++ b/src/scss/mixins/_radio-checkbox.scss
@@ -26,8 +26,7 @@
         border-radius: 9999px;
         height: $_o-forms-radio-internal-default-size;
         width: $_o-forms-radio-internal-default-size;
-        left: $_o-forms-radio-internal-offset;
-        top: $_o-forms-radio-internal-offset;
+        margin: $_o-forms-radio-internal-offset;
     }
 }
 
@@ -104,13 +103,9 @@
         text-align: right;
     }
 
+    & + .#{$class}__label::after,
     & + .#{$class}__label::before {
         right: 0;
-        left: auto;
-    }
-
-    & + .#{$class}__label::after {
-        right: $_o-forms-radio-internal-offset;
         left: auto;
     }
 }
